v1.3 - Attempt to fix touch action on IOS for Atk/Mag toggle

--- a/css/index.v1.3.css
+++ b/css/index.v1.3.css
@@ -11,6 +11,11 @@ hr {
 	border: 1px solid #d7ddde;
 }
 
+.btn {
+	touch-action: manipulation;
+	cursor: pointer;
+}
+
 .header-bar {
 	background-image: linear-gradient(to bottom right, #ac5210, #ebb44a);
 	color: white;
